# log-cpp

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/logcpp/: FileLogger.h  GetAppDataPath.h  NoLogger.h  StdoutLogger.h  log.h
scripts/: build.sh  prepare-build.sh
src/: Logger.cpp
test/src/: main.cpp
